Save data to mongo and expose devices api

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,24 @@
-/logs
-/.idea
+# Dependencies
+node_modules/
+
+# Logs
+logs/
+*.log
+
+# Environment
+.env
+.env.local
+.env.production
+
+# Runtime
+*.pid
+*.sock
+
+# IDE
+.idea/
+.vscode/
+*.swp
+
+# OS
+.DS_Store
+Thumbs.db
