--- a/server/package.json
+++ b/server/package.json
@@ -10,5 +10,10 @@
   "private": true,
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "mongodb": "^6.3.0"
   }
 }
